--- a/fault_analyzer/templates/fault_analyzer/index.html
+++ b/fault_analyzer/templates/fault_analyzer/index.html
@@ -53,7 +53,7 @@
                                                     RBCDN Faults:
                                                 </div>
 
-                                                <table class="table">
+                                                <table class="table fault-table">
                                                     <thead>
                                                     <tr>
                                                         <th>#</th>
@@ -64,8 +64,8 @@
                                                     <tbody>
                                                     <tr>
                                                         <th scope="row">1</th>
-                                                        <td><span class="text-overflow">1.00000</span></td>
-                                                        <td><span class="text-overflow">3.00000</span></td>
+                                                        <td><span class="text-overflow lat">48.6909603909255</span></td>
+                                                        <td><span class="text-overflow lng">-11.337890625</span></td>
                                                     </tr>
                                                     <tr>
                                                         <th scope="row">2</th>
