fixing bug for selecting fault regions from fault table.

--- a/fault_analyzer/static/fault_analyzer/sass/application.scss
+++ b/fault_analyzer/static/fault_analyzer/sass/application.scss
@@ -4,4 +4,13 @@
       padding: 10px;
     }
   }
+  .fault-table-container {
+    max-height: 150px;
+    overflow: auto;
+  }
+  table.fault-table {
+    tbody tr {
+      cursor: pointer;
+    }
+  }
 }
