--- a/fault_analyzer/templates/fault_analyzer/index.html
+++ b/fault_analyzer/templates/fault_analyzer/index.html
@@ -53,27 +53,32 @@
                                                     RBCDN Faults:
                                                 </div>
 
-                                                <table class="table fault-table">
-                                                    <thead>
-                                                    <tr>
-                                                        <th>#</th>
-                                                        <th>Latitude</th>
-                                                        <th>Longitude</th>
-                                                    </tr>
-                                                    </thead>
-                                                    <tbody>
-                                                    <tr>
-                                                        <th scope="row">1</th>
-                                                        <td><span class="text-overflow lat">48.6909603909255</span></td>
-                                                        <td><span class="text-overflow lng">-11.337890625</span></td>
-                                                    </tr>
-                                                    <tr>
-                                                        <th scope="row">2</th>
-                                                        <td><span class="text-overflow">2.00000</span></td>
-                                                        <td><span class="text-overflow">4.00000</span></td>
-                                                    </tr>
-                                                    </tbody>
-                                                </table>
+                                                <div class="fault-table-container">
+                                                    <table class="table fault-table">
+                                                        <thead>
+                                                        <tr>
+                                                            <th>#</th>
+                                                            <th>Latitude</th>
+                                                            <th>Longitude</th>
+                                                        </tr>
+                                                        </thead>
+                                                        <tbody>
+                                                        <tr>
+                                                            <th scope="row">1</th>
+                                                            <td><span class="text-overflow lat">48.6909603909255</span>
+                                                            </td>
+                                                            <td><span class="text-overflow lng">-11.337890625</span>
+                                                            </td>
+                                                        </tr>
+                                                        <tr>
+                                                            <th scope="row">2</th>
+                                                            <td><span class="text-overflow">2.00000</span></td>
+                                                            <td><span class="text-overflow">4.00000</span></td>
+                                                        </tr>
+                                                        </tbody>
+                                                    </table>
+                                                </div>
+
                                                 <div class="well well-sm">
                                                     <ul class="list-group">
                                                         <li class="list-group-item">
