Able to render fault analysis details based on dummy data returned.

--- a/fault_analyzer/templates/fault_analyzer/base.html
+++ b/fault_analyzer/templates/fault_analyzer/base.html
@@ -31,6 +31,7 @@
 <script type="text/javascript" src="{% static 'network_editor/javascripts/lib/js.cookie.js' %}"></script>
 <script type="text/javascript" src="{% static 'network_editor/javascripts/lib/mustache.js' %}"></script>
 <script type="text/javascript" src="{% static 'network_editor/javascripts/mustache-templates.js' %}"></script>
+<script type="text/javascript" src="{% static 'fault_analyzer/javascripts/mustache-templates.js' %}"></script>
 {% bootstrap_javascript %}
 <script type="text/javascript" src="{% static 'network_editor/leaflet/leaflet.js' %}"></script>
 <script type="text/javascript" src="{% static 'network_editor/leaflet/mercatorConverter.js' %}"></script>
