--- a/fault_analyzer/templates/fault_analyzer/index.html
+++ b/fault_analyzer/templates/fault_analyzer/index.html
@@ -63,38 +63,26 @@
                                                         </tr>
                                                         </thead>
                                                         <tbody>
-                                                        <tr>
-                                                            <th scope="row">1</th>
-                                                            <td><span class="text-overflow lat">48.6909603909255</span>
-                                                            </td>
-                                                            <td><span class="text-overflow lng">-11.337890625</span>
-                                                            </td>
-                                                        </tr>
-                                                        <tr>
-                                                            <th scope="row">2</th>
-                                                            <td><span class="text-overflow">2.00000</span></td>
-                                                            <td><span class="text-overflow">4.00000</span></td>
-                                                        </tr>
                                                         </tbody>
                                                     </table>
                                                 </div>
 
                                                 <div class="well well-sm">
-                                                    <ul class="list-group">
+                                                    <ul class="list-group fault-details-list">
                                                         <li class="list-group-item">
-                                                            <span class="badge">2</span>
+                                                            <span class="badge composition_deposition_number"></span>
                                                             Composition deposition number:
                                                         </li>
                                                         <li class="list-group-item">
-                                                            <span class="badge">1</span>
+                                                            <span class="badge largest_component_size"></span>
                                                             Largest Component Size:
                                                         </li>
                                                         <li class="list-group-item">
-                                                            <span class="badge">3</span>
+                                                            <span class="badge smallest_component_size"></span>
                                                             Smallest Component Size:
                                                         </li>
                                                         <li class="list-group-item">
-                                                            <span class="badge">2</span>
+                                                            <span class="badge fault_regions_considered"></span>
                                                             Fault Regions Considered:
                                                         </li>
                                                     </ul>
