--- a/fault_analyzer/static/fault_analyzer/sass/application.scss
+++ b/fault_analyzer/static/fault_analyzer/sass/application.scss
@@ -7,10 +7,22 @@
   .fault-table-container {
     max-height: 150px;
     overflow: auto;
+    td {
+      max-width: 50px;
+    }
   }
   table.fault-table {
     tbody tr {
       cursor: pointer;
+    }
+  }
+
+  .fault-collapse {
+    .panel {
+      margin-bottom: 0;
+      .well, .list-group {
+        margin-bottom: 0;
+      }
     }
   }
 }
