--- a/network_editor/templates/network_editor/header.html
+++ b/network_editor/templates/network_editor/header.html
@@ -12,9 +12,10 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="{% url 'home' %}"><img src="{% static 'network_editor/images/dtra_logo.png' %}"
-                                                                     height="40px"
-                                                                     width="40px" alt="npmt logo"></a>
+                <a class="navbar-brand" href="{% url 'home' %}"><img
+                        src="{% static 'network_editor/images/dtra_logo.png' %}"
+                        height="40px"
+                        width="40px" alt="npmt logo"></a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -25,8 +26,6 @@
                     </li>
                     <li class="{% if active_tab == 'fault_analyzer' %}active{% endif %}">
                         <a href="{% url 'fault_analyzer:index' %}">Fault Analyzer</a>
-                    </li>
-                    <li class="{% if active_tab == 'path_analyzer' %}active{% endif %}"><a href="#">Path Analyzer</a>
                     </li>
                 </ul>
             </div><!-- /.navbar-collapse -->
