Keeping both fault accordions closed on start.

--- a/fault_analyzer/templates/fault_analyzer/index.html
+++ b/fault_analyzer/templates/fault_analyzer/index.html
@@ -106,7 +106,7 @@
                                     </a>
                                 </h4>
                             </div>
-                            <div id="specified-faults-collapse" class="fault-collapse panel-collapse collapse in"
+                            <div id="specified-faults-collapse" class="fault-collapse panel-collapse collapse out"
                                  role="tabpanel"
                                  aria-labelledby="headingSpecifiedFaults">
                                 <div class="panel-body">
