--- a/network_editor/static/network_editor/sass/content.scss
+++ b/network_editor/static/network_editor/sass/content.scss
@@ -28,6 +28,12 @@
     }
   }
   .edge-list {
+    .edge-start, .edge-end {
+      span.text-overflow {
+        display: inline-flex;
+        width: 65px;
+      }
+    }
     .edge-list-item {
       position: relative;
       .delete-edge, .edit-edge {
