Removing ambuiguity for fault table in fault_analyzer

--- a/fault_analyzer/templates/fault_analyzer/index.html
+++ b/fault_analyzer/templates/fault_analyzer/index.html
@@ -118,7 +118,7 @@
                                                   aria-hidden="true"></span>
                                         </h5>
                                         <div class="fault-table-container row-space">
-                                            <table id="specified-faults-table" class="table fault-table">
+                                            <table id="specified-faults-table" class="table specified-fault-table">
                                                 <thead>
                                                 <tr>
                                                     <th>#</th>
